MMCPA-2020: Fixing dropdown issue on IE10.

--- a/docroot/themes/custom/alshaya_white_label/sass/base/form/select/_select.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/base/form/select/_select.scss
@@ -89,6 +89,7 @@ select:focus::-ms-value {
     width: 2.1875rem;
     height: 2.1875rem;
     background: $white-two;
+    z-index: 9;
 
     &::after {
       // IE10 needs this in px.
